--- a/index.html
+++ b/index.html
@@ -3,163 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>day 05 in html</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>this is video</h1>
-    <video
-      src="https://cdn.pixabay.com/video/2024/12/04/244839_tiny.mp4"
-      controls
-      width="500"
-    ></video>
-    <video
-      src="https://cdn.pixabay.com/video/2024/12/04/244839_tiny.mp4"
-      width="500"
-      controls
-      autoplay
-      muted
-      loop
-    ></video>
-    <audio
-      src="together-forever-8d-frequency-spiritual-20-12582.mp3"
-      controls
-    ></audio>
-    <br /><br />
+    <h1>Home Page</h1>
 
-    <table border="1">
-      <tr>
-        <td>sr no.</td>
-        <td>name</td>
-        <td>runs</td>
-        <td>balls</td>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>rohit sharma</td>
-        <td>45</td>
-        <td>30</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>ms dhoni</td>
-        <td>100</td>
-        <td>132</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>virat kohli</td>
-        <td>49</td>
-        <td>60</td>
-      </tr>
-    </table>
-    <br />
-
-    <table border="1">
-      <tr>
-        <th>sr no.</th>
-        <th>name.</th>
-        <th>runs</th>
-        <th>balls</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>rohit sharma</td>
-        <td>45</td>
-        <td>30</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>ms dhoni</td>
-        <td>100</td>
-        <td>132</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>virat kohli</td>
-        <td>49</td>
-        <td>60</td>
-      </tr>
-    </table>
-    <br />
-    <table border="1">
-      <tr>
-        <th>sr no.</th>
-        <th>name</th>
-        <th colspan="2">scores</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>rohit sharma</td>
-        <td>45</td>
-        <td>30</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>ms dhoni</td>
-        <td>100</td>
-        <td>132</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>virat kohli</td>
-        <td>49</td>
-        <td>60</td>
-      </tr>
-    </table>
-    <br />
-
-    <table border="1">
-      <tr>
-        <th>sr no.</th>
-        <th>name</th>
-        <th colspan="2">scores</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>rohit sharma</td>
-        <td>45</td>
-        <td>30</td>
-      </tr>
-      <tr>
-        <td rowspan="2">2</td>
-        <td>ms dhoni</td>
-        <td>100</td>
-        <td>132</td>
-      </tr>
-      <tr>
-        <td>virat kohli</td>
-        <td>49</td>
-        <td>60</td>
-      </tr>
-      <br />
-
-      <table border="1">
-        <caption>
-          TEAM INDIAs
-        </caption>
-        <tr>
-          <th>sr no.</th>
-          <th>name</th>
-          <th colspan="2">scores</th>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>rohit sharma</td>
-          <td>45</td>
-          <td>30</td>
-        </tr>
-        <tr>
-          <td rowspan="2">2</td>
-          <td>ms dhoni</td>
-          <td>100</td>
-          <td>132</td>
-        </tr>
-        <tr>
-          <td>virat kohli</td>
-          <td>49</td>
-          <td>60</td>
-        </tr>
-      </table>
-    </table>
+    <a href="Teams.html" style="margin: 20px">Teams</a>
+    <a href="Players.html" style="margin: 20px">Payers</a>
+    <a href="stadiam.html" style="margin: 20px">stadium</a>
+    <a href="matchschaduels.html" style="margin: 20px">schaduels</a>
   </body>
 </html>
